--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <li><a href="https://www.paradiseclothingco.com/products/island-life-mens-shirt-in-blue-1">Island Life Mens Shirt in Blue</a></li>
         <li><a href="https://www.uniqlo.com.hk/zh_HK/product-detail.html?productCode=u0000000051050">black</a></li>
         <li><a href="https://www.uniqlo.com.hk/zh_HK/product-detail.html?productCode=u0000000050188">black</a></li>
+        <li><a href="https://www.uniqlo.com.hk/zh_HK/product-detail.html?productCode=u0000000028261&searchFlag=true">skin</a></li>
     </ul>
 </body>
 </html>
