--- a/info/2.html
+++ b/info/2.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="zh-TW">
 
-	<head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# article: http://ogp.me/ns/article# place: http://ogp.me/ns/place#"> 
-		<meta charset="utf-8">
+	<head prefix="og: https://ogp.me/ns# fb: https://ogp.me/ns/fb# article: https://ogp.me/ns/article# place: https://ogp.me/ns/place#">
+        <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0"/>
         <meta http-equiv="x-ua-compatible" content="IE=edge, chrome=1">
         <meta property="fb:app_id" content="#" />
@@ -16,21 +16,20 @@
         <meta property="og:description" content="我們存在的任務是：致力促進全校各社團發展、持續為會員辦理各式活動,同時也收集大家的意見和想法、爭取全體學生權益,推進校內重要議題的討論及實踐。" />
         <title>澳門粵華中學學生會 YWC Student Association</title>
         <meta name="description" content="我們存在的任務是：致力促進全校各社團發展、持續為會員辦理各式活動,同時也收集大家的意見和想法、爭取全體學生權益,推進校內重要議題的討論及實踐。">
-        <link rel="icon" sizes="16x16" href="./image/Colegio_Yuet_Wah_emblem.png">
+        <link rel="icon" sizes="16x16" href="../image/Colegio_Yuet_Wah_emblem.png">
         
         
-        <link href="./css/lato.css" rel="stylesheet">
-        <link rel="stylesheet" href="./css/noto.css">
-
-        <link rel="stylesheet" href="./css/base.min.css">
-        <link rel="stylesheet" href="./css/all.min.css">
-        <link rel="stylesheet" href="./css/line-awesome.css">
-        <link rel="stylesheet" href="./css/animate.css">
-        <link rel="stylesheet" href="./css/style.css">
-        <link rel="stylesheet" href="./css/owl.carousel.min.css">
-        <link rel="stylesheet" href="./css/owl.carousel.default.min.css">
-        <link rel="stylesheet" href="./css/jquery.fancybox.min.css">
-        <link rel="stylesheet" href="./css/index.css">
+        <link href="../css/lato.css" rel="stylesheet">
+        <link rel="stylesheet" href="../css/noto.css">
+        <link rel="stylesheet" href="../css/base.min.css">
+        <link rel="stylesheet" href="../css/all.min.css">
+        <link rel="stylesheet" href="../css/line-awesome.css">
+        <link rel="stylesheet" href="../css/animate.css">
+        <link rel="stylesheet" href="../css/style.css">
+        <link rel="stylesheet" href="../css/owl.carousel.min.css">
+        <link rel="stylesheet" href="../css/owl.carousel.default.min.css">
+        <link rel="stylesheet" href="../css/jquery.fancybox.min.css">
+        <link rel="stylesheet" href="../css/index.css">
 	</head>
 
 	<body>
@@ -48,8 +47,8 @@
                                 <div class="header-widget d-flex align-items-center justify-content-end">
                                     <div class="header-right-info">
                                         <ul class="social-info d-flex align-items-center">
-                                            <li><a href="./index.html"  title="回首頁"><img src="./image/Colegio_Yuet_Wah_emblem.png" alt="logo" width=40px height=40px></a></li>
-                                            <li><a href="https://www.instagram.com/17th_ywcsu_election_group1/" target="_blank" title="Instagram"><img src="./image/Instagram_icon.png" width=40px height=40px></a></li>
+                                            <li><a href="../index.html"  title="回首頁"><img src="../image/Colegio_Yuet_Wah_emblem.png" alt="logo" width=40px height=40px></a></li>
+                                            <li><a href="https://www.instagram.com/17th_ywcsu_election_group1/" target="_blank" title="Instagram"><img src="../image/Instagram_icon.png" width=40px height=40px></a></li>
                                         </ul>
                                     </div>
                                 </div>
@@ -66,10 +65,10 @@
                                     <nav class="main-menu">
                                         <ul>
                                             <li>
-                                                <a href="./info/1.html">學生會介紹</a>
+                                                <a href="../info/1.html">學生會介紹</a>
                                                 <ul class="dropdown-menu-item">
-                                                                                                    <li><a href="./info/1.html">政綱介紹</a></li>
-                                                                                                    <li><a href="./info/2.html">侯選團隊簡介</a></li>
+                                                                                                    <li><a href="../info/1.html">政綱介紹</a></li>
+                                                                                                    <li><a href="../info/2.html">侯選團隊簡介</a></li>
                                                                                             </ul>
                                             </li>
                                     </nav>
@@ -87,15 +86,15 @@
                                         <div class="side-menu-wrap">
                                             <ul class="side-menu-ul">
                                                 <li class="sidenav-item">
-                                                    <a href="./index.html">首頁</a>
+                                                    <a href="../index.html">首頁</a>
                                                 </li>
 
                                                 <li class="sidenav-item">
-                                                    <a href="./info/1.html">學生會介紹</a>
+                                                    <a href="../info/1.html">學生會介紹</a>
                                                     <span class="menu-plus-icon"></span>
                                                     <ul class="side-sub-menu">
-                                                        <li><a href="./info/1.html">政綱介紹</a></li>
-                                                        <li><a href="./info/2.html">侯選團隊簡介</a></li>
+                                                        <li><a href="../info/1.html">政綱介紹</a></li>
+                                                        <li><a href="../info/2.html">侯選團隊簡介</a></li>
                                                     </ul>
                                                 </li>
                                             </ul>
@@ -110,61 +109,40 @@
             </div>
         </section>
 
-        <section id="intro" class="benefit-area">
+        <section class="blog-page-area area">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-6">
-                        <div class="benefit-heading">
-                            <div class="section-heading">
-                                <h5 class="section-meta">YWC Student Association</h5>
-                                <h2 class="section-title">澳門粵華中學學生會第17屆學生會侯選團隊第一組</h2>
+                    <div class="col-lg-4">
+                        <div class="sidebar">
+                            <div class="sidebar-widget category-widget">
+                                <h3 class="widget-title">學生會介紹</h3>
                                 <span class="section-divider"></span>
-                                <p class="section-desc">我們的參選理念，包括:完善學生會對學生的服務，並且創造一個團結友愛的粵華社群，我們亦都會繼承到粵華的優良傳統—鋼般意志！</p>
-                                <div class="row benefit-course-box">
-                                    <div class="col-lg-4">
-                                        <div class="benefit-item benefit-item1">
-                                            <span class="la la-comments benefit-icon"></span>
-                                            <h4 class="benefit-title">溝通管道</h4>
-                                        </div>
-                                    </div>
-                                    <div class="col-lg-4">
-                                        <div class="benefit-item benefit-item2">
-                                            <span class="la la-balance-scale benefit-icon"></span>
-                                            <h4 class="benefit-title">保障權益</h4>
-                                        </div>
-                                    </div>
-                                    <div class="col-lg-4">
-                                        <div class="benefit-item benefit-item3">
-                                            <span class="la la-fist-raised benefit-icon"></span>
-                                            <h4 class="benefit-title">謀取福利</h4>
-                                        </div>
-                                    </div>
-                                </div>
+                                <ul class="widget-list">
+                                                                        <li  class="active" ><a href="../info/1.html" title="政綱介紹">政綱介紹</a></li>
+                                                                        <li ><a href="../info/2.html" title="侯選團隊簡介">侯選團隊簡介</a></li>
+                                                                </ul>
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-6">
-                        <div class="benefit-img">
-                            <img src="./image/2022-12-07.jpg" alt="Image">
-                            <img src="./image/02.jpg" alt="Image">
+                    <div class="col-lg-8">
+                        <div class="blog-content-wrap">
+                            <div class="blog-item">
+                                <div class="blog-content content">
+                                    <p><img src="../image/49c094bbedb243a4d5601ea59d49fa9.jpg" style="width: 300px;" class="fr-fic fr-dib"></p><p><strong><span style="font-size: 18px;">甄景鋒　會長</span></strong></p><p><span style="font-size: 16px;"><strong>班級：</strong>高一丙</span></p><p><span style="font-size: 16px;"><strong>經歷：</strong></span>班長</p><p><img src="../image/5434a4be37d4d5a6745dd9ecc579db5.jpg" style="width: 300px;" class="fr-fic fr-dib fr-fil"></p><p dir="ltr"><span style="font-size: 18px;"><strong>馮冠然　副會長</strong></span></p><p><span style="font-size: 16px;"><strong>班級：</strong>F4C</span></p><p><strong>經歷：&nbsp;</strong></p><p><br></p><p><img src="../image/c65c7e2fcd0c85602c36d58e6734805.jpg"  class="fr-fic fr-dib"></p><p dir="ltr">
+                                    <span style="font-size: 18px;"><strong>助選團</span><br>
+                                    <p>龔傑濠<span style="font-size: 16px;"> 班級：F4C</span></p>
+                                    <p>李康銘<span style="font-size: 16px;"> 班級：F4C</span></p>
+                                    <p>關旭朗<span style="font-size: 16px;"> 班級：F4C</span></p>
+                                    <p>鄭匡哲<span style="font-size: 16px;"> 班級：F4C</span></p>
+                                    <p>陳家豪<span style="font-size: 16px;"> 班級：高一乙</span></p>
+                                    <p>朱家和<span style="font-size: 16px;"> 班級：高一丙</span></p>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
-
-        <div style="display:none" id="index-modal">
-            <div class="content">
-                <img src="./image/Colegio_Yuet_Wah_emblem.png">
-                <p>歡迎來到澳門粵華中學第17屆學生會侯選團隊第一組網站！</p>
-            </p></p>
-            </div>
-            <div class="btn-close">
-                <a href="javascript:void(0)" title="" data-fancybox-close>關閉</a>
-            </div>
-        </div>
-            </main>
-
         <div class="alert alert-cookie fade show" role="alert">
             <div class="content">
                 <span>本網站使用 cookies 來了解您如何使用我們的網站並改善您的體驗。 如繼續瀏覽本網站，即表示您同意我們使用 cookies。</span>
@@ -173,12 +151,8 @@
             </div>
         </div>
 
-        <script src="./js/base.min.js"></script>
-        <script src="./js/wow.js"></script>
-        <script src="./js/main.js"></script>
-        <script src="./js/owl.carousel.min.js"></script>
-        <script src="./js/jquery.fancybox.min.js"></script>
-        <script src="./js/index.js"></script>
-
-	</body>
+        <script src="../js/base.min.js"></script>
+        <script src="../js/wow.js"></script>
+        <script src="../js/main.js"></script>
+    </body>
 </html>
